# StoreProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StoreProject.sln
StoreProject/: CMakeLists.txt  ClientControl.cpp  ClientControl.h  StoreProject.cpp  StoreProject.vcxproj  StoreProject.vcxproj.filters  receipt.txt
